[gd_scene load_steps=7 format=3 uid="uid://sixfqsom77do"]

[ext_resource type="Script" uid="uid://dmnpsxvjpg7lh" path="res://game.gd" id="1_fc0e3"]
[ext_resource type="PackedScene" uid="uid://0rgoslwspiir" path="res://trees/tree.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://xwqhwh8tyog6" path="res://characters/player_cat/player_cat.tscn" id="2_fc0e3"]
[ext_resource type="FontFile" uid="uid://bmfccjxytgkd6" path="res://characters/glyphy/sixtyfour.ttf" id="4_fc0e3"]

[sub_resource type="Curve2D" id="Curve2D_7jktm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1016, -598, 0, 0, 0, 0, 1129, -717, 0, 0, 0, 0, 1162, 824, 0, 0, 0, 0, -1050, 716, 0, 0, 0, 0, -1016, -598)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jktm"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.116741, 0.116741, 0.116741, 0.639216)

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fc0e3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 7.0
offset_top = 4.0
offset_right = 1909.0
offset_bottom = 1082.0
color = Color(0.314266, 0.473985, 0.171756, 1)

[node name="CatPlayer" parent="." instance=ExtResource("2_fc0e3")]
unique_name_in_owner = true
position = Vector2(938, 566)

[node name="Path2D" type="Path2D" parent="CatPlayer"]
curve = SubResource("Curve2D_7jktm")

[node name="PathFollow2D" type="PathFollow2D" parent="CatPlayer/Path2D"]
unique_name_in_owner = true
position = Vector2(-1016, -598)
rotation = -0.055421

[node name="Tree" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(340, 287)

[node name="Tree2" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1386, 225)

[node name="Tree3" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(520, 667)

[node name="Tree4" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1348, 736)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="PlayerHUD" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="PlayerHUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7jktm")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerHUD/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label_PlayerLevel" type="Label" parent="PlayerHUD/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_fc0e3")
theme_override_font_sizes/font_size = 32
text = "Level: 1"

[connection signal="health_depleted" from="CatPlayer" to="." method="_on_player_health_depleted"]
[connection signal="level_up" from="CatPlayer" to="." method="_on_cat_player_level_up"]
[connection signal="timeout" from="Timer" to="." method="spawn_mob"]
